--- a/assets/sass/index.sass
+++ b/assets/sass/index.sass
@@ -1,6 +1,14 @@
 $font-stack:    Helvetica, sans-serif
 $primary-color: #333
+$default-weight: 500
 
 body
-  font: 100% $font-stack
+  font: $font-stack
   color: $primary-color
+  font-weight: $default-weight
+
+#query-list
+  li.complete 
+    label
+      text-decoration: line-through
+ 
