sass, simple hello world

--- a/assets/sass/index.sass
+++ b/assets/sass/index.sass
@@ -1,14 +1,14 @@
+//@import "bootstrap"
+
 $font-stack:    Helvetica, sans-serif
 $primary-color: #333
-$default-weight: 500
 
 body
   font: $font-stack
   color: $primary-color
-  font-weight: $default-weight
 
 #query-list
-  li.complete 
+  li.complete
     label
       text-decoration: line-through
- 
+
