--- a/assets/sass/defaults/spacing.sass
+++ b/assets/sass/defaults/spacing.sass
@@ -1,9 +1,20 @@
-@import "bootstrap"
+@import "bootstrap/variables"
+@import "bootstrap/mixins"
+
+@import "bootstrap/grid"
+@import "bootstrap/forms"
+@import "bootstrap/buttons"
 
 input[type=text]
   @extend .form-control
-  margin-top: 1.5em
-  padding: 2px 10px
 
+  margin-top: 1.5em
+  padding: 0 10px
   width: 250px
-    
+
+#app 
+  @extend .container
+
+button.round
+  @extend .btn, .btn-default
+
