adds label to select all

--- a/assets/templates/queries.hbs
+++ b/assets/templates/queries.hbs
@@ -17,7 +17,9 @@
     <h2>Queries</h2>
 
     {{outlet}} 
-    {{input type="checkbox" id="toggle-all" checked=allAreDone}}
+    <label>
+      select all {{input type="checkbox" id="toggle-all" checked=allAreDone}}
+    </label>
   </section>
 
   <footer id="footer">
