--- a/assets/sass/defaults/spacing.sass
+++ b/assets/sass/defaults/spacing.sass
@@ -1,9 +1,8 @@
-@import "bootstrap"
+@import "bootstrap/variables"
+@import "bootstrap/mixins"
+@import "bootstrap/grid"
 
-input[type=text]
-  @extend .form-control
-  margin-top: 1.5em
-  padding: 2px 10px
+#app
+  @extend .container
 
-  width: 250px
-    
+   
