--- a/assets/sass/defaults/type.sass
+++ b/assets/sass/defaults/type.sass
@@ -1,21 +1,20 @@
-@import "bootstrap"
+@import "bootstrap/variables"
+@import "bootstrap/mixins"
+@import "bootstrap/type"
 
 $font-stack:    Helvetica, sans-serif
 $primary-color: #333
 
-p, li, input, label, span
+*
+  font: $font-stack
+  color: $primary-color
+
+p, li, a, input, label, span
   font-size: 14px
   line-height: 1.75em
 
 h1
   font-weight: 700
-
-body
-  font: $font-stack
-  color: $primary-color
-
-#app
-  @extend .container
 
 #query-list
   li.complete
