--- a/assets/sass/defaults/spacing.sass
+++ b/assets/sass/defaults/spacing.sass
@@ -2,7 +2,12 @@
 @import "bootstrap/mixins"
 @import "bootstrap/grid"
 
-#app
+
+
+div#app 
   @extend .container
 
-   
+.btn span.caret
+  margin-left: 5px
+
+
