move sass around

--- a/assets/sass/init.sass
+++ b/assets/sass/init.sass
@@ -1,4 +1,9 @@
+
+$font-stack: Helvetica, sans-serif
+$primary-color: #333
+
 @import "bootstrap"
-@import "defaults/spacing"
-@import "defaults/type"
+@import "spacing"
+@import "type"
+@import "colors"
 
