--- a/assets/sass/type.sass
+++ b/assets/sass/type.sass
@@ -1,9 +1,5 @@
-$font-stack: Helvetica, sans-serif
-$primary-color: #333
 
-#app *
-  font-family: $font-stack
-  color: $primary-color
+*
   ::first-letter
     text-transform: Uppercase
 
@@ -16,4 +12,5 @@ h1
   font-weight: 700
   font-size: 4em
   margin: 30px 0
+
 
