sass now compotent bassed

--- a/assets/sass/init.sass
+++ b/assets/sass/init.sass
@@ -3,7 +3,8 @@ $font-stack: Helvetica, sans-serif
 $primary-color: #333
 
 @import "bootstrap"
-@import "spacing"
-@import "type"
-@import "colors"
+@import "main"
+@import "quries"
+@import "buttons"
+@import "footer"
 
