--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,5 +1,13 @@
 
+#app
+  @extend .container
+  @extend .clearfix
+  margin-bottom: 2em
+
+
 *
+  font-family: $font-stack
+  color: $primary-color
   ::first-letter
     text-transform: Uppercase
 
@@ -11,6 +19,7 @@ p, li, input, label, span
 h1
   font-weight: 700
   font-size: 4em
-  margin: 30px 0
+  margin-top: 40px
+  margin-bottom: 30px
 
 
