--- a/assets/sass/init.sass
+++ b/assets/sass/init.sass
@@ -4,7 +4,7 @@ $primary-color: #333
 
 @import "bootstrap"
 @import "main"
-@import "quries"
 @import "buttons"
 @import "footer"
+@import "queries" 
 
