--- a/assets/sass/footer.sass
+++ b/assets/sass/footer.sass
@@ -1,11 +1,14 @@
  
 #footer
   background-color: $primary-color
-  padding-top: 25px
-  padding-bottom: 20px
+  padding-top: 15px
+  padding-bottom: 10px
+  z-index: 2123123131231
+  margin-top: 50px
 
 #footer-content *
   @extend .container
   color: white
   text-align: center
 
+  
