--- a/assets/sass/queries.sass
+++ b/assets/sass/queries.sass
@@ -1,9 +1,25 @@
 
 .query-field
   margin-top: 25px
+  min-height: 69px
     
 .page-header + .query-field
   margin-top: 5px
 
 
+
+.lanuch-query
+  @extend .btn 
+  @extend .btn-primary
+  @extend .btn-lg
+
+  display: block
+  max-width: 250px
+
+  padding-top: 15px
+  padding-bottom: 15px
+
+  margin-top: 50px
+  margin-left: auto
+  margin-right: auto
 
