--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,9 +1,10 @@
+html, body
+  height: 100%
 
 #app
   @extend .container
   @extend .clearfix
-  margin-bottom: 2em
-
+  
 
 *
   font-family: $font-stack
