adds stateful constraint

--- a/assets/sass/footer.sass
+++ b/assets/sass/footer.sass
@@ -1,6 +1,6 @@
  
 #footer
-  background-color: $primary-color
+  background-color: $color-1
   padding-top: 15px
   padding-bottom: 10px
   z-index: 2123123131231
