--- a/assets/sass/init.sass
+++ b/assets/sass/init.sass
@@ -1,6 +1,8 @@
 
 $font-stack: Helvetica, sans-serif
-$primary-color: #333
+$color-2: #333
+$color-1: #222
+$color-0: #fff
 
 @import "bootstrap"
 @import "main"
