--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -4,23 +4,28 @@ html, body
 #app
   @extend .container
   @extend .clearfix
-  
 
 *
   font-family: $font-stack
-  color: $primary-color
+  color: $color-2
   ::first-letter
     text-transform: Uppercase
 
-p, li, input, label, span
+  + span, *
+    color: inherit
+    font-size: inherit 
+    font-weight: inherit 
+    font-family: inherit 
+
+p, li, input, label
   font-size: 14px
   line-height: 1.8em
   font-weight: 500
 
 h1
+  color: $color-1
   font-weight: 700
   font-size: 4em
   margin-top: 40px
   margin-bottom: 30px
-
 
