--- a/assets/sass/queries.sass
+++ b/assets/sass/queries.sass
@@ -6,20 +6,29 @@
 .page-header + .query-field
   margin-top: 5px
 
-
+.query-btn 
+  color: $color-0
+  background-color: $color-1 
+  border-color: $color-2 
+  &:hover
+    color: $color-2
+    border-color: $color-2 
+    background-color: $color-0
 
 .lanuch-query
   @extend .btn 
   @extend .btn-primary
   @extend .btn-lg
+  @extend .query-btn
 
   display: block
-  max-width: 250px
+  max-width: 150px
 
-  padding-top: 15px
-  padding-bottom: 15px
+  padding-top: 10px
+  padding-bottom: 10px
 
   margin-top: 50px
   margin-left: auto
   margin-right: auto
+
 
