--- a/assets/sass/buttons.sass
+++ b/assets/sass/buttons.sass
@@ -2,3 +2,8 @@
 .btn.btn-primary
   color: white
 
+.remove-constraint-button
+  @extend .glyphicon.glyphicon-remove
+  cursor: pointer
+  margin-right: .5em
+  font-size: .9em
