refactors preview view

--- a/assets/sass/preview.sass
+++ b/assets/sass/preview.sass
@@ -1,16 +1,20 @@
 
+.pv-category-constraints, .pv-categories
+  list-style: none
 
-#query-preview
+.pv-categories
+  padding-left: 0
 
-  ul
-    .outer-list-elem
-      font-weight: 700
+.pv-category-constraints
+  padding-left: 1.5em
 
-    ul
-      .inner-list-elem
-        font-weight: 400
+.preview-category
+  font-weight: 700
 
-      .remove-constraint-button
-        cursor: pointer
-        margin-right: .5em
-        font-size: .9em
+.pv-constraint
+  font-weight: 400
+
+.remove-constraint-button
+  cursor: pointer
+  margin-right: .5em
+  font-size: .9em
