--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -31,3 +31,11 @@ h1
 
 .full-width
   width: 100%
+
+.hide-excess
+  overflow-y: hidden
+  text-overflow: ellipsis
+  white-space: normal !important
+
+.space-below
+  margin-bottom: 2em
