--- a/assets/sass/buttons.sass
+++ b/assets/sass/buttons.sass
@@ -1,3 +1,26 @@
 
 .btn.btn-primary
   color: white
+
+
++keyframes(SPIN-ANIMATION)
+  from
+    transform: rotate(0deg)
+    -ms-transform: rotate(0deg)
+    -moz-transform: rotate(0deg)
+    -webkit-transform: rotate(0deg)
+  to 
+    transform: rotate(360deg)
+    -ms-transform: rotate(360deg)
+    -moz-transform: rotate(360deg)
+    -webkit-transform: rotate(360deg)
+
+
+.hidden-xs .loading
+  margin-left: .5em
+
+.loading, i.loading.glyphicon
+  animation: SPIN-ANIMATION 1.25s infinite
+  -moz-animation: SPIN-ANIMATION 1.25s infinite
+  -webkit-animation: SPIN-ANIMATION 1.25s infinite
+  
