adds information about data

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -7,6 +7,17 @@ html, body
   
   max-width: 940px
 
+.modal-text p
+  font-weight: 400 !important
+
+  
+.about-link a
+  float: right
+  font-size: 1.5em
+
+.about-link a, .heading a 
+  color: #000
+
 *
   font-family: $font-stack
   color: $color-2
